fix: DoH DNS fallback, HLS proxy routing, spotlight titles, standalone JAR/EXE packaging